[package]
name = "miden_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-vm = "0.8.0"
miden-stdlib = "0.8.0"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
criterion = "0.5.1"
miden-vm = "0.8.0"
miden-stdlib = "0.8.0"

[[bench]]
name = "keccak256"
harness = false

[[bench]]
name = "sha256"
harness = false